# ymfan

./: README.md  config.json  main.py  pyproject.toml
.ymfan_venv/: pyvenv.cfg
.ymfan_venv/Scripts/: activate  activate.bat  jp.py
database/: db.py  server.db
router/assets/: asset.py
router/assets/data/: BackgroundConfiguration  BackgroundData  EffectAudio  EffectData  SkinData  SkinTexture
router/chart/: upload.py  upload_form.py  upload_s3.py
router/item/: background.py  effect.py  engine.py  particle.py  skin.py
router/sonolus/: data.py  info.py  level_info.py  levels.py
static/up_chart/: index.html  script.js
static/upload/: index.html  script.js  style.css
